# poke-env

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .pyre_configuration  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  Updating moves datafiles instructions.md  conftest.py  out.json  pyproject.toml  requirements-clean.txt  requirements-dev.txt  requirements.in  requirements.txt  setup.py
.circleci/: config.yml
.github/: FUNDING.yml  dependabot.yml
.github/scripts/: check_examples.py  examples-requirements.txt
.github/workflows/: check-examples.yml  lint.yml  nightly.yml  python-publish.yml  tests.yml  update-data.yml
diagnostic_tools/: anything_goes_gen_7_random_battles_and_teams.py  anything_goes_gen_8_random_battles_and_teams.py  anything_goes_gen_8_random_double_battles_and_teams.py  anything_goes_gen_9_random_battles_and_teams.py  gen8_random_battles.py  parse-game-messages.py  store-game-messages.py
docs/: Makefile
docs/source/: battle.rst  conf.py  connecting_to_showdown_and_challenging_humans.rst  cross_evaluate_random_players.rst  examples.rst  getting_started.rst  index.rst  max_damage_player.rst  module_documentation.rst  modules.rst  move.rst  other_environment.rst  ou_max_player.rst  player.rst  poke-env.rst  pokemon.rst  pokemon_showdown_env.rst  rl_with_open_ai_gym_wrapper.rst  teambuilder.rst  top_level_modules.rst  using_custom_teambuilder.rst
docs/source/examples/: index.rst  (+13 more)
examples/: connecting_an_agent_to_showdown.py  cross_evaluate_random_players.ipynb  cross_evaluate_random_players.py  cross_evaluate_random_players_gen7.py  custom_teambuilder.py  env_example.py  experimental-self-play.py  gen7_ou_max_player.py  gymnasium_example.py  max_damage_player.py  open_ai_baselines.py  openai_example.py  ou_max_player.py  quickstart.ipynb  reinforcement_learning.py  requirements.txt  rl_with_gymnasium_wrapper.py  rl_with_new_open_ai_gym_wrapper.py  rl_with_open_ai_gym_wrapper.py  saving_replays.py  self_play.py  self_play_with_new_open_ai_gym_wrapper.py  tracking_observations.py  using_a_custom_teambuilder.ipynb
examples/gen7/: cross_evaluate_random_players.py  custom_teambuilder.py  max_damage_player.py  ou_max_player.py  rl_with_open_ai_gym_wrapper.py
fixture_data/: ash-greninja balance.showdown  bad company.showdown  beast coast tom hayden27.showdown  beastcoasttt-413XPlayz.showdown  believe.showdown  blunder policy gengar.showdown  champions_rain.showdown  champions_sun.showdown  clefable dugtrio.showdown  core4.showdown  example_doubles_logs.txt  example_doubles_request.json  example_doubles_zoroark_request.json  example_gen1_request.json  example_request.json  example_zoroark_request.json  force_switch_example_request.json  ghost town.showdown  gmax.showdown  lo clefable bulky offense.showdown  mega mawile balance.showdown  new balance.showdown  paraflinch squad.showdown  scarlet rags.showdown  ss goodra.showdown  teams.json  the PO show.showdown  the forgotten hero of many battles.showdown  times like these.showdown  under the rainbow.showdown
integration_tests/: test_baselines.py  test_concurrency_control.py  test_double_battles.py  test_doubles_env.py  test_env.py  test_env_bench.py  test_env_player.py  test_laddering.py  test_misc_features.py  test_simple_cross_evaluation.py  test_singles_env.py  test_speed.py  test_using_teams.py
integration_tests_strict/: test_strict.py
krl-env/: pip-selfcheck.json  pyvenv.cfg
model_10000/: saved_model.pb
model_10000/variables/: variables.data-00000-of-00001  variables.index
pokemon_showdown_env/: constants.py  utils.py
scripts/: check_docs_links.py  ci_setup_showdown.sh  data_script_utils.py  learnset_update_script.py  learnset_update_script_copy.py  make_docs.sh  move_update_script.py  move_update_script_copy.py  move_update_script_with_past_gens.py  pokedex_update_script.py  pokedex_update_script_copy.py  pokedex_update_script_with_past_gens.py  run_strict_integration_repeats.sh  update_abilities.py  update_all_data.sh  update_items.py  update_learnset.py  update_moves.py  update_moves_from_following_gen.py  update_pokedex.py  update_pokedex_from_following_gen.py  updates_from_following_gen.py
src/: pendulum.py  random_player_ex.py  rl_with_open_ai_gym_wrapper-.textClipping  rl_with_open_ai_gym_wrapper-cem.py  rl_with_open_ai_gym_wrapper-ddpg.py  rl_with_open_ai_gym_wrapper-p.py  rl_with_open_ai_gym_wrapper-sarsa.py  rl_with_open_ai_gym_wrapper.py
src/examples/: cross_evaluate_random_players.py
src/poke_env/: __init__.py  concurrency.py  data.py  exceptions.py  player_configuration.py  raw_stats.py  raw_stats_converter.py  server_configuration.py  stats.py  utils.py
src/pokemon_showdown_env/: __init__.py  constants.py  exceptions.py  player_configuration.py  server_configuration.py  utils.py
strict_integration_tests/: test_strict.py
test/: conftest.py  test_data.py  test_utils.py
test/environment/: test_move.py  test_pokemon_type.py  test_type.py
test/player/: test_player_network_interface.py
unit_tests/: conftest.py  test_data.py  test_raw_stats.py  test_raw_stats_converter.py  test_utils.py
unit_tests/calc/: test_damage_calc_gen1_2.py  test_damage_calc_gen9.py
unit_tests/environment/: test_battle.py  test_double_battle.py  test_dynamax.py  test_enumerations.py  test_move.py  test_observation.py  test_past_gen_data.py  test_pokemon.py  test_pokemon_type.py  test_single_agent_wrapper.py
unit_tests/fixture_data/: custom gen7 ou.showdown  la familia.showdown  teams.json
unit_tests/player/: test_baselines.py  test_battle_orders.py  test_doubles_baselines.py  test_env.py  test_env_bench.py  test_env_player.py  test_gymnasium.py  test_laddering.py  test_openai.py  test_player_default_configuration.py  test_player_evaluation.py  test_player_misc.py  test_player_network_interface.py  test_poke_env.py
unit_tests/ps_client/: test_account_configuration.py  test_ps_client.py
unit_tests/teambuilder/: test_constant_teambuilder.py  test_raw_stats_converter.py  test_teambuilder.py  test_teambuilder_pokemon.py
(+157 files in other folders)
