[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "poke_env"
version = "0.11.0"
description = "A python interface for training Reinforcement Learning bots to battle on pokemon showdown."
readme = "README.md"
requires-python = ">=3.10.0"
license = { file = "LICENSE" }
authors = [{ name = "Haris Sahovic", email = "contact@sahovic.fr" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Games/Entertainment :: Simulation",
    "Topic :: Games/Entertainment :: Turn Based Strategy",
    "Topic :: Internet",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "gymnasium>=1.0.0",
    "numpy>=2.0.2",
    "orjson>=3.10.15",
    "pettingzoo>=1.24.3",
    "requests>=2.32.3",
    "tabulate>=0.9.0",
    "websockets==16.0",
]

[project.optional-dependencies]
dev = [
    "black==26.1.0",
    "flake8>=7.1.1",
    "isort==7.0.0",
    "mypy==1.19.1",
    "nbsphinx>=0.9.6",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
    "pytest-timeout>=2.3.1",
    "sphinx>=7.4.7",
    "sphinx-rtd-theme>=3.0.2",
    "twine>=6.1.0",
    "types-requests>=2.32.0.20241016",
    "wheel>=0.45.1",
]

[project.urls]
Documentation = "https://poke-env.readthedocs.io/en/stable/"
Repository = "https://github.com/hsahovic/poke-env"

[tool.black]
line-length = 88
skip-magic-trailing-comma = true

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.pyright]
include = ["src"]
pythonVersion = "3.10"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
